# rift

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  visual-mode-demo.html  visual-mode-design.md
benches/: annotations_bench.rs  buffer_bench.rs  history_bench.rs  input_bench.rs  job_bench.rs  movement_bench.rs  render_bench.rs  screen_bench.rs  search_bench.rs  syntax_bench.rs  wrap_bench.rs
docs/: search_spec.md  text_objects.md
docs/superpowers/plans/: 2026-04-07-editor-refactoring.md  2026-06-18-visual-mode-multiregion.md
scripts/: analyze_failed.py  analyze_patterns.py  generate_key_combos.py  key_combinations.json  key_combinations.txt  pattern_analysis.txt  retry_failed_combos.py
src/: buffer.rs  buffer.zig  character.rs  character_tests.rs  command.rs  command.zig  component.rs  constants.rs  dot_repeat.rs  editor.rs  editor.zig  key.rs  key.zig  lib.rs  main.rs  main.zig  message.rs  mode.rs  perf.rs  render.rs  render.zig  repro_unicode.rs  string_nav.rs  tests.rs  time.rs  viewport.rs  wrap.rs
src/action/: mod.rs  tests.rs
src/annotations/: action.rs  kind.rs  marker.rs  marker_prop_tests.rs  marker_tests.rs  mod.rs  payload.rs  presentation.rs  registry.rs  tests.rs  value.rs  value_tests.rs
src/buffer/: api.rs  byte_map.rs  line_cache.rs  line_index.rs  mod.rs  movement_tests.rs  tests.rs
src/buffer/line_index/: mod.rs  tests.rs
src/buffer/rope/: conversion_tests.rs  iterator_tests.rs  logical_bytes_tests.rs  mod.rs  tests.rs
src/character/: mod.rs  tests.rs
src/cli/: mod.rs  tests.rs
src/clipboard/: mod.rs
src/color/: buffer.rs  mod.rs  styled.rs  tests.rs  theme.rs
src/color/buffer/: mod.rs  tests.rs
src/color/styled/: mod.rs  tests.rs
src/color/theme/: mod.rs  tests.rs
src/command/: mod.rs  tests.rs
src/command/input/: mod.rs  tests.rs
src/command_line/: component.rs  mod.rs  tests.rs
src/command_line/commands/: completion.rs  definitions.rs  mod.rs  types.rs
src/command_line/executor/: mod.rs  tests.rs  tests_local.rs
src/command_line/parser/: mod.rs  tests.rs
src/constants/: mod.rs
src/cursor/: mod.rs
src/document/: definitions.rs  edit.rs  factories.rs  history.rs  manager.rs  mod.rs  persistence.rs  populate.rs  search.rs  selection_render.rs  settings.rs  tests.rs
src/dot_repeat/: mod.rs
src/editor/: actions.rs  annotations_ops.rs  command_exec.rs  command_line_handler.rs  completion.rs  component_action_impl.rs  context_impl.rs  document_ops.rs  explorer.rs  file_ops.rs  handle_action.rs  history.rs  init.rs  insert_typing_stress_tests.rs  jobs.rs  lsp_ops.rs  mod.rs  mode_mgmt.rs  multi_region.rs  operators.rs  panel_handlers.rs  pending_grammar.rs  plugin_ops.rs  rendering.rs  run_loop.rs  split_move_tests.rs  split_nav_stress_tests.rs  terminal_tests.rs  tests.rs  text_object_input.rs
src/editor_api/: mod.rs
src/error/: manager.rs  mod.rs  tests.rs
src/eval/: mod.rs  tests.rs
src/executor/: mod.rs  tests.rs
src/file_explorer/: action_impl.rs  mod.rs  tests.rs
src/floating_window/: mod.rs  tests.rs
src/fs_backend/: mod.rs  native.rs  tests.rs
src/history/: command.rs  mod.rs  tests.rs
src/input_box/: mod.rs  tests.rs
src/ipc/: channel_backend.rs  client.rs  daemon.rs  key_notation.rs  mod.rs  protocol.rs  session.rs
src/job_manager/: jobs.rs  mod.rs  tests.rs
src/key/: mod.rs
src/key_handler/: mod.rs  tests.rs
src/keymap/: defaults.rs  mod.rs  tests.rs  trie.rs
src/layer/: mod.rs  tests.rs
src/lsp/: annotation_tests.rs  broker.rs  client.rs  config.rs  mod.rs  protocol.rs  tests.rs
src/message/: mod.rs
src/mode/: mod.rs
src/movement/: boundaries.rs  buffer.rs  classify.rs  mod.rs  tests.rs
src/notification/: mod.rs  tests.rs
src/paint/: mod.rs  tests.rs
src/perf/: mod.rs
src/plugin/: events.rs  lua_host.rs  lua_host_stub.rs  lua_host_tests.rs  lua_state.rs  lua_value.rs  lua_value_tests.rs  mod.rs
src/render/: components.rs  ecs.rs  mod.rs  system.rs  tests.rs
src/replay/: assert.rs  backend.rs  mod.rs  ops.rs  ops_tests.rs  runner.rs  runner_tests.rs
src/screen_buffer/: mod.rs  tests.rs
src/search/: capability_test.rs  haystack.rs  literal_search.rs  mod.rs  tests.rs
src/select_view/: mod.rs  tests.rs
src/selection/: mod.rs  tests.rs
src/split/: layout.rs  mod.rs  navigation.rs  tests.rs  tree.rs  window.rs
src/split_view/: mod.rs  tests.rs
src/state/: mod.rs  tests.rs
src/status/: mod.rs  tests.rs
src/syntax/: imp.rs  interval_tree.rs  interval_tree_tests.rs  loader.rs  mod.rs  stub.rs  tests.rs
src/term/: ansi.rs  ansi.zig  backend.zig  mod.rs  posix.zig  terminal.rs  terminal_stub.rs  windows.zig
src/test_utils/: mod.rs  tests.rs
src/text_objects/: mod.rs  tests.rs  treesitter.rs
src/transport/: mod.rs
src/undotree_view/: actions.rs  component.rs  mod.rs  tests.rs
src/viewport/: mod.rs  tests.rs
src/wrap/: mod.rs
zig/: README.md  build.zig  build.zig.zon
zig/scripts/: capture_keys.zig  generate_keymap.zig
zig/src/: buffer.zig  command.zig  editor.zig  keymap.zig  main.zig  mode.zig  render.zig  root.zig
(+38 files in other folders)
