[package]
name = "rift"
version = "0.1.0"
edition = "2021"
default-run = "rift"

[features]
default = []
treesitter = ["dep:tree-sitter-rust", "dep:tree-sitter-python"]

[dependencies]
crossterm = "0.28.1"
monster-regex = "0.2.2"
unicode-width = "0.2.2"
streaming-iterator = "0.1.9"

tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }


tree-sitter = { version = "0.24.5" }


[dev-dependencies]
tempfile = "3.24.0"
