[package]
name = "monster-rift"
version = "0.1.4"
edition = "2021"
default-run = "rift"
description = "A vim-like text editor"
license = "MIT"
authors = ["monster0506 <tjraklovits@gmail.com>"]
repository = "https://github.com/monster0506/rift"
readme = "README.md"

[[bin]]
name = "rift"
path = "src/main.rs"

[features]
default = []
treesitter = [
    "dep:tree-sitter-bash",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-css",
    "dep:tree-sitter-go",
    "dep:tree-sitter-html",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-json",
    "dep:tree-sitter-lua",
    "dep:tree-sitter-md",
    "dep:tree-sitter-python",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-yaml",
    "dep:tree-sitter-java",
    "dep:tree-sitter-c-sharp",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-php",
    "dep:tree-sitter-zig",

]

[dependencies]
crossterm = "0.28.1"
monster-regex = "0.2.2"
unicode-width = "0.2.2"
streaming-iterator = "0.1.9"

tree-sitter = { version = "0.26.3" }

tree-sitter-bash = { version = "0.25.1", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-css = { version = "0.25.0", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-lua = { version = "0.4.1", optional = true }
tree-sitter-md = { version = "0.5.1", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-yaml = { version = "0.7.2", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-php = { version = "0.24.2", optional = true }
tree-sitter-zig = { version = "1.1.2", optional = true }


[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
tempfile = "3.24.0"

[[bench]]
name = "buffer_bench"
harness = false

[[bench]]
name = "render_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "movement_bench"
harness = false

[[bench]]
name = "syntax_bench"
harness = false





